# python-ngsild-client

./: .gitignore  .readthedocs.yml  Dockerfile  Dockerfile.paperspace  README.md  RELEASE-NOTES.md  demo.cast  model.gaphor  parking_sample.jsonld  parking_system.jsonld  pyproject.toml  simple_alert_receiver_server.py  tutorial.ipynb
.github/: ci.yml
.github/workflows/: ci.yml
brokers/ cassiopeia/: README.md
brokers/orionld/: README.md  docker-compose-troe.yml  docker-compose.yml
brokers/scorpio/: README.md  docker-compose.yml
brokers/stellio/: README.md  docker-compose.yml
cookbook/agents/: tutorial10_csv.py  tutorial11_csv_async.py  tutorial12_csv_batch.py  tutorial13_csv_batch_async.py  tutorial15_json.py  tutorial16_json_async.py  tutorial17_json_batch.py  tutorial18_json_batch_async.py  tutorial23_dataframe_batch.py  tutorial24_dataframe_batch async.py  tutorial31_api_client_async.py  tutorial40_api_server_flask_upload_csv.py  tutorial41_api_server_fastapi_upload_csv_async.py  tutorial42_api_server_flask_rest_json.py  tutorial43_api_server_fastapi_rest_json_async.py
cookbook/entities/: tutorial1_poi.py  tutorial2_device.py  tutorial3_devicemodel.py  tutorial4_agricrop.py  tutorial5_agrisoil.py  tutorial6_building.py  tutorial7_urbanmobility.py  tutorial8_weather.py  tutorial9_pipe.py
docs/: requirements.txt
docs/source/: _api.rst  api.rst  build.rst  client.rst  conf.py  cookbook.rst  exceptions_hierarchy_ascii_scheme.html  exceptions_hierarchy_ascii_scheme.txt  index.rst  install.rst  license.rst  (+2 more)
samples/: air_observed.json  gettingstarted.json
tests/: common.py  conftest.py  test_attr.py  test_batch async.py  test_batch.py  test_builder.py  test_client.py  test_context.py  test_entities async.py  test_entities.py  test_entity.py  test_graph.py  test_helper_context.py  test_helper_opening_hours.py  test_helper_postal.py  test_helper_subscription.py  test_helper_temporal.py  test_iso8601.py  test_ngsidict.py  test_ngsildclient.py  test_orionldclient.py  test_property.py  test_serialization.py  test_smart_datamodels.py  test_temporal.py  test_urn.py
(+548 files in other folders)
