[tool.poetry]
name = "orionldclient"
version = "0.1.0"
description = ""
authors = ["fbattello <fabien.battello@orange.com>"]

[tool.poetry.dependencies]
python = "^3.9"
geojson = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.8b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
