[tool.poetry]
name = "ngsildclient"
version = "0.1.1"
description = ""
authors = ["fbattello <fabien.battello@orange.com>"]

[tool.poetry.dependencies]
python = "^3.9"
geojson = "^2.5.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.8b0", allow-prereleases = true}
pytest-mock = "^3.6.1"
requests-mock = "^1.9.3"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
flake8-black = "^0.2.3"
Sphinx = "^4.2.0"
sphinx-autodoc-typehints = "^1.12.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
